Filter checkboxes styled: inner box still visible, needs fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,4 +4,5 @@
     // border: solid 1px orange;
     display: flex;
     background-color: rgba(255, 115, 0, 0.363);
+    gap: 10px;
 }
