--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -1,5 +1,5 @@
 .nav{
-    border: solid 1px purple;
+    // border: solid 1px purple;
     padding: 10px;
     display: flex;
     justify-content: flex-start;
